2021-03-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/gen.c:
	  Emit ldhl for calls on SM83.

2021-03-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_fsdiv.c: fixed bug with very small, but normal numbers
	* device/include/float.h: no need to mask off bit23 in MANT() macro

2021-03-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Disable accidentially comitted gbz80 zero push optimization.

2021-03-24 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peeph.def:
	  Fix some rules and remove invalid ones.

2021-03-24 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peeph-gbz80.def,
	  src/z80/peeph.def:
	  Make some GBZ80 rules common.

2021-03-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a bug in tlcs90 interrupt handling.

2021-03-22 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx,
	  src/z80/gen.c,
	  src/z80/main.c,
	  configure.ac,
	  configure:
	  The GameBoy's CPU core is the SM83, also used in some Sharp microcontrollers.

2021-03-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/float.h: added __NAN
	* device/lib/_fsdiv.c: many small optimizations, starting from patch
	  #368, thanks Marco Bodrato
	* device/lib/_ulong2fs.c: fixed warning
	* support/regression/tests/bug-2516.c: do not use denormal float

2021-03-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/mappings.i:
	  Fix broken debug symbols.

2021-03-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph-gbz80.def,
	  src/z80/peeph.def:
	  Fix rule 1b, remove redundant rules.

2021-03-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/gen.c:
	  Optimize pushing of 4B+ constant arguments.

2021-03-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* device/lib/gbz80/crt0.s,
	  support/regression/ports/ucgbz80/uCsim.cmd:
	  Change emulator entry to 0x100 like after real bootrom

2021-03-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/gen.c: